correction contraste4

--- a/src/sass/components/_projectgrid.scss
+++ b/src/sass/components/_projectgrid.scss
@@ -37,7 +37,7 @@
       height: 300px;
     }
 
-    &-inner {
+    &-container {
       position: relative;
       width: 100%;
       height: 100%;
@@ -54,8 +54,10 @@
     }
 
     &-front {
+     color: #333333;
       z-index: 2;
-      background-color: white;
+      background-color: #FFFFFF;
+      color:#333333;
       border-radius: 25px;
       display: flex;
       align-items: center;
@@ -70,6 +72,7 @@
       }
 
       &-title {
+        color: #000000;
         text-transform: uppercase;
         position: absolute;
         top: 10px;
